Added visual references of common steps when using the SDK for video content and for messaging.

--- a/AclipsaSDK/Aclipsa SDK Documentation/html/introduction.html
+++ b/AclipsaSDK/Aclipsa SDK Documentation/html/introduction.html
@@ -298,6 +298,16 @@ errorBlock:^(NSError *error)
 	// Error loading the video
 }];</code></pre>
 
+<h2>Section 5 — Visual Overview</h2>
+
+<div style="float: left;">
+	<img alt="developerVideoManagementiOS" src="developerVideoManagementiOS.png" width="352" height="672">
+</div>
+
+<div style="float: right;">
+	<img alt="developerMessagingiOS" src="developerMessagingiOS.png" width="368" height="928">
+</div>
+
 					<footer>
 						<div class="footer-copyright">
 							
