Fixed a bad link in the documentation.

--- a/AclipsaSDK/Aclipsa SDK Documentation/html/index.html
+++ b/AclipsaSDK/Aclipsa SDK Documentation/html/index.html
@@ -48,7 +48,7 @@
 							<h2 class="index-title">Programming Guides</h2>
 							<ul>
 								
-								<li><a href="docs/Documentation/Introduction.html">Introduction</a></li>
+								<li><a href="./introduction.html">Introduction</a></li>
 								
 							</ul>
 						</div>
